# opstack-executor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_QUICKREF.md  Dockerfile  EC2_DEPLOYMENT_README.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LOGGING_MONITORING_SUMMARY.md  Makefile  OPTIMIZATION_RECOMMENDATIONS.md  QUICK_START.md  README.md  README_API.md  REQUIREMENTS_VALIDATION.md  VERIFICATION_CHECKLIST.md  api_models.py  deploy.sh  docker-compose.yml  hierarchy_executor.py  http_server.py  lambda_handler.py  pyproject.toml  redeploy.sh  requirements.txt  run_server.py  template.yaml  test_api.py  test_http_server.py  test_stream.py  test_stream_raw.py  test_streaming.sh
.kiro/specs/hierarchical-multi-agent/: design.md  tasks.md
.specify/: constitution.md
.specify/memory/: constitution.md
1-Requirement/: Requirement.md
docs/: API_DEPLOYMENT.md  API_REFERENCE.md  EC2_DEPLOYMENT_GUIDE.md  EC2_DOCKER_QUICKSTART.md
examples/: api_usage_example.py  event_manager_demo.py  execution_engine_demo.py  hierarchical_manager_demo.py  logging_monitor_demo.py  multi_team_parallel_request.json  output_formatter_demo.py  performance_monitoring_demo.py  sample_config.json  simple_request.json  supervisor_demo.py  template_processing_demo.py  tool_integration_demo.py
scripts/: init-db.sql
src/: __init__.py
src/api/routes/: __init__.py  health.py  hierarchies.py  models.py  runs.py
src/api/schemas/: common.py  hierarchy_schemas.py  run_schemas.py
src/core/: __init__.py  api_models.py  config.py  hierarchy_executor.py  hierarchy_system.py  output_formatter.py
src/db/: __init__.py  database.py  models.py
src/db/repositories/: __init__.py  hierarchy_repo.py  run_repo.py
src/ec2/: server.py
src/hierarchical_agents/: __init__.py  agents.py  builtin_tools.py  cli.py  config_manager.py  data_models.py  env_key_manager.py  error_handler.py  event_manager.py  execution_engine.py  hierarchical_executor.py  hierarchical_manager.py  key_manager.py  llm_providers.py  logging_monitor.py  main.py  output_formatter.py  performance_monitor.py  state_manager.py  team_builder.py  tools.py
src/hierarchical_agents/api/: __init__.py  executions.py  teams.py
src/lambda_deploy/: handler.py
src/runner/: run_manager.py
src/streaming/: __init__.py  event_store.py  llm_callback.py  output_interceptor.py  redis_client.py  sse_manager.py
tests/: __init__.py  test_agents.py  test_api.py  test_api_executions.py  test_api_integration.py  test_api_teams.py  test_config_manager.py  test_context_sharing.py  test_end_to_end_integration.py  test_env_key_manager.py  test_error_handler.py  test_event_manager.py  test_execution_engine.py  test_execution_modes.py  test_hierarchical_executor.py  test_hierarchical_manager.py  test_http_server.py  test_key_manager.py  test_llm_providers.py  test_logging_monitor.py  test_no_context_sharing.py  test_output_formatter.py  test_package_structure.py  test_performance_monitor.py  test_quantum_research_full.py  test_state_manager.py  test_streaming_api.py  test_team_builder.py  test_tools.py
